# my-agent-assets

./: .gitignore  AGENTS.md  Cargo.toml  README.md  my_agent_assets_final_goal.md
.github/workflows/: desktop-windows-test-package.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  visual-qa.html  vite.config.ts
apps/desktop/scripts/: visual-qa-readiness.d.mts  visual-qa-readiness.mjs  visual-qa.mjs
apps/desktop/src/: App.test.tsx  App.tsx  mock-data.ts  styles.css  visual-qa.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: apply.rs  apply_tests.rs  codex.rs  codex_tests.rs  command_error.rs  conflict_apply_tests.rs  contracts.rs  lib.rs  main.rs  path_utils.rs  preview.rs  preview_tests.rs  read_only.rs  read_only_tests.rs  settings.rs  settings_tests.rs  shared_core.rs  sync_apply.rs  sync_apply_tests.rs  write_safety_e2e_tests.rs
apps/desktop/src/app/: CurrentPage.tsx  contracts.test.ts  contracts.ts  data-api.test.ts  data-api.ts  detail-context.ts  pages.ts  provider.ts
apps/desktop/src/lib/: platform.test.ts  platform.ts
apps/desktop/src/pages/: AssetDetailPage.tsx  BackupRestorePage.tsx  CommandsListPage.tsx  ConflictResolverPage.tsx  DashboardPage.tsx  DashboardRecovery.test.tsx  McpManagement.test.tsx  McpServersListPage.tsx  MountManagerPage.tsx  ProjectDetailPage.tsx  ProjectsListPage.tsx  (+7 more)
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_flow.rs
crates/core/: Cargo.toml
crates/core/src/: adopt.rs  asset_access.rs  asset_registry.rs  audit_log.rs  backup_delete.rs  backup_history.rs  batch_import.rs  consistency_repair.rs  delete.rs  diagnostic_export.rs  diagnostics.rs  discovery.rs  fingerprint.rs  fs_sync.rs  git_sync.rs  import.rs  initialization.rs  lib.rs  managed_projects.rs  mcp.rs  mcp_management.rs  mount.rs  mount_registry.rs  operation.rs  path_safety.rs  project_registry.rs  query.rs  settings.rs  target_management.rs  targets.rs
docs/: codex-readonly-support.md  design.md  desktop-static-gui-freeze.md  execution-plan.md  final-beta-readiness.md  final-product-model.md  implementation-progress.md  manual-acceptance-checklist.md  preview-only-workflows.md  read-only-integration.md  releasing.md  requirements.md  tauri-command-contract.md  v1-beta-readiness.md  v1-full-test-plan.md  write-safety-contract.md
scripts/: check-release-version.mjs  e2e_fake_git_sync.sh  e2e_fake_runtime.sh
(+15 files in other folders)
