[package]
name = "my-agent-assets-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "maa"
path = "src/main.rs"

[dependencies]
my-agent-assets-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
