[package]
name = "my-agent-assets-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "my_agent_assets_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "my-agent-assets-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
my-agent-assets-core = { path = "../../../crates/core" }
humantime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
toml = "0.8"
